--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Tribute Website | A.P. J Abdul Kalam</title>
+    <title>The Tribute Website | Swami Vivekananda</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -17,12 +17,13 @@
             <img src="./images/apj.jpg" alt="tribute" />
           </div>
           <div>
-            <h1>A . P . J Abdul Kalam</h1>
-            <h4>1931 - 2015</h4>
+            <h1>Swami Vivekananda</h1>
+            <h4>1863 - 1902</h4>
           </div>
         </section>
         <section class="about_section">
-          <h2>Missile Man of India</h2>
+          <h2>Indian philosopher
+</h2>
           <p>
             <b>Avul Pakir Jainulabdeen Abdul Kalam</b> 15 October 1931 – 27 July
             2015) was an Indian aerospace scientist who served as the 11th
@@ -78,8 +79,8 @@
         </section>
         <footer>
           <p>
-            Read more about A. P. J. Abdul Kalam on
-            <a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam"
+            Read more about Swami Vivekananda on
+            <a href="https://en.wikipedia.org/wiki/Swami_Vivekananda"
               >Wikipedia.</a
             >
           </p>
