--- a/index.html
+++ b/index.html
@@ -25,55 +25,35 @@
           <h2>Indian philosopher
 </h2>
           <p>
-            <b>Avul Pakir Jainulabdeen Abdul Kalam</b> 15 October 1931 – 27 July
-            2015) was an Indian aerospace scientist who served as the 11th
-            president of India from 2002 to 2007. He was born and raised in
-            Rameswaram, Tamil Nadu and studied physics and aerospace
-            engineering. He spent the next four decades as a scientist and
-            science administrator, mainly at the Defence Research and
-            Development Organisation (DRDO) and Indian Space Research
-            Organisation (ISRO) and was intimately involved in India's civilian
-            space programme and military missile development efforts.[1] He thus
-            came to be known as the Missile Man of India for his work on the
-            development of ballistic missile and launch vehicle
-            technology.[2][3][4] He also played a pivotal organisational,
-            technical, and political role in India's Pokhran-II nuclear tests in
-            1998, the first since the original nuclear test by India in 1974.
+            <b>Swami Vivekananda</b> Swami Vivekananda was a Hindu monk and one of the most celebrated spiritual leaders of India. He was more than just a spiritual mind; he was a prolific thinker, great orator and passionate patriot. He carried on the free-thinking philosophy of his guru, Ramakrishna Paramhansa forward into a new paradigm. He worked tirelessly towards betterment of the society, in servitude of the poor and needy, dedicating his all for his country. He was responsible for the revival of Hindu spiritualism and established Hinduism as a revered religion on world stage. His message of universal brotherhood and self-awakening remains relevant especially in the current backdrop of widespread political turmoil around the world. The young monk and his teachings have been an inspiration to many, and his words have become goals of self-improvement especially for the youth of the country. For this very reason, his birthday, January 12, is celebrated as the National Youth Day in India.
           </p>
         </section>
         <section class="biography_section">
           <h3>Biographies</h3>
           <ul>
             <li>
-              Eternal Quest: Life and Times of Dr Kalam by S Chandra; Pentagon
-              Publishers, 2002.
+              Place of Birth: Calcutta, Bengal Presidency (Now Kolkata in West Bengal)
             </li>
             <li>
-              President A P J Abdul Kalam by R K Pruthi; Anmol Publications,
-              2002.
+              Parents: Vishwanath Dutta (Father) and Bhuvaneshwari Devi (Mother)
             </li>
             <li>
-              A P J Abdul Kalam: The Visionary of India by K Bhushan, G Katyal;
-              A P H Pub Corp, 2002.
+              Education: Calcutta Metropolitan School; Presidency College, Calcutta
             </li>
             <li>
-              A Little Dream (documentary film) by P. Dhanapal; Minveli Media
-              Works Private Limited, 2008.
+              Institutions: Ramakrishna Math; Ramakrishna Mission; Vedanta Society of New York
             </li>
             <li>
-              The Kalam Effect: My Years with the President by P M Nair; Harper
-              Collins, 2008.
+              Philosophy: Advaita Vedanta
             </li>
             <li>
-              My Days With Mahatma Abdul Kalam by Fr A K George; Novel
-              Corporation, 2009.
+              Publications: Karma Yoga (1896); Raja Yoga (1896); Lectures from Colombo to Almora (1897); My Master (1901)
             </li>
             <li>
-              A.P.J. Abdul Kalam: A Life by Arun Tiwari; Haper Collins, 2015.
+              Death: July 4, 1902
             </li>
             <li>
-              The People's President: Dr A P J Abdul Kalam by S M Khan;
-              Bloomsbury Publishing, 2016.
+              Place of Death: Belur Math, Belur, Bengal
             </li>
           </ul>
         </section>
