--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <h3>Biographies</h3>
           <ul>
             <li>
+              Date of Birth: January12, 1863 
+            </li>
+            <li>
               Place of Birth: Calcutta, Bengal Presidency (Now Kolkata in West Bengal)
             </li>
             <li>
